# lingebra

./: CMakeLists.txt  README.md
include/dklib/math/: angle.hpp  angle_concepts.hpp  concepts.hpp  matrix.hpp  matrix2d.hpp  matrix3d.hpp  matrix4d.hpp  matrix_concepts.hpp  quaternion.hpp  tensor.hpp  tensor_concepts.hpp  types.hpp  vector.hpp  vector2d.hpp  vector3d.hpp  vector4d.hpp  vector_concepts.hpp
tests/: test_quaternion.cpp  test_tensor.cpp  test_utilities.hpp  test_vector.cpp  test_vector2d.cpp  test_vector3d.cpp  test_vector4d.cpp
